<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".AlarmMainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_learn_more" android:title="@string/action_learn_more"
          android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/action_feedbackUserVoice" android:title="@string/action_feedback_UserVoice"
          android:orderInCategory="103" android:onClick="showUserVoiceFeedback" />
    <item android:id="@+id/action_tutorial" android:title="@string/action_tutorial"
          android:orderInCategory="103" android:onClick="showTutorial" />
    <item android:id="@+id/action_add_alarm" android:icon="@drawable/add_alarm_button"
        android:title="@string/action_add_alarm" app:showAsAction="ifRoom"/>
    </menu>
