<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green1"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:id="@+id/onboarding_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            style="@style/Font.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onboarding_welcome_title">
        </TextView>
        <TextView
            style="@style/Font.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onboarding_welcome_text">
        </TextView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/onboarding_tutorial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <Button
            android:id="@+id/skip_button"
            style="@style/Font.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00ffffff"
            android:text="@string/onboarding_skip"/>
        <android.support.v4.view.ViewPager
            android:id="@+id/onboarding_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="60dp"
            android:overScrollMode="never">
        </android.support.v4.view.ViewPager>

        <com.microsoft.mimickeralarm.onboarding.BubblePagerIndicator
            android:id="@+id/onboarding_indicator"
            android:layout_width="100dp"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>

